syntax = "proto3";

package achirikova.emergence;

option go_package = "emergence/api;api_pb";


import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service NotyfierService {
  rpc CreateChats (CreateChatsRequest) returns (CreateChatsResponse) {
    option (google.api.http) = {
      post: "/CreateChats"
      body: "*"
    };
  }
  // RPC for deleting a chats by external user ids
  rpc DeleteChats (DeleteChatsRequest) returns (DeleteChatsResponse) {
    option (google.api.http) = {
      post: "/DeleteChats"
      body: "*"
    };
  }
  // get rpc for getting a chats by user ids
  rpc GetNotification (GetNotificationRequest) returns (GetNotificationResponse) {
    option (google.api.http) = {
      get: "/GetNotification/{userid}"
    };
  }

}
//GetNotificationRequest is a request for getting a chats by user ids
message GetNotificationRequest {
  string userid = 1;
}
//GetNotificationResponse is a response for getting a chats by user ids
message GetNotificationResponse {
  string answer = 1;
}
//DeleteChatsRequest is a request to delete chats
message DeleteChatsRequest {
  repeated string user_ids = 1;
}
//DeleteChatsResponse is a response to delete chats
message DeleteChatsResponse {
  repeated string deleted_chats = 1;
}
//CreateChats
message CreateChatsRequest {
  map<string, int32> ExternalUserIdToInterval = 1;
}

message CreateChatsResponse {
  map<string, string> ExternalUserIdToChatUrl = 1;
}
message UserInfoDto {
  string ExternalUserId = 1;
  string Address = 2;

}
